--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -10,16 +10,7 @@ jobs:
     steps:
       - name: step one
         uses: actions/checkout@v2
-      - name: step two
-        run: env | sort
-
-  job2:
-    name: Second job
-    runs-on: windows-latest
-    needs: job1
-
-    steps:
-      - name: step one
-        uses: actions/checkout@v2
-      - name: step two
-        run: "Get-ChildItem Env: | Sort-Object Name"
+      - name: run system test1
+        uses: ./.github/workflows/run_module_system_tests.yml
+        with:
+          module_name: nidigital
