--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -11,6 +11,6 @@ jobs:
       - name: step one
         uses: actions/checkout@v2
       - name: run system test1
-        uses: ./.github/workflows/run_module_system_tests.yml
+        uses: SukruthGrandhiNI/githubactions@main/
         with:
           module_name: nidigital
