--- a/action.yml
+++ b/action.yml
@@ -1,22 +1,21 @@
-name: "Run system tests"
-description: "Run system tests for the specified module"
-
+name: "Hello World"
+description: "Greet someone"
 inputs:
-  module_name:
-    description: "module name to run system tests"
+  who-to-greet: # id of input
+    description: "Who to greet"
     required: true
-
+    default: "World"
+outputs:
+  random-number:
+    description: "Random number"
+    value: ${{ steps.random-number-generator.outputs.random-id }}
 runs:
   using: "composite"
   steps:
-    - name: checkout the repository
-      uses: actions/checkout@v2
-    - name: Run system tests
-      run: |
-        cd generated
-        mkdir junit
-        mkdir kibana
-        cd ${{inputs.module_name}}
-        echo "python -m tox -c tox-system_tests.ini"
-      env:
-        TOX_PARALLEL_NO_SPINNER: 1
+    - run: echo Hello ${{ inputs.who-to-greet }}.
+      shell: bash
+    - id: random-number-generator
+      run: echo "::set-output name=random-id::$(echo $RANDOM)"
+      shell: bash
+    - run: ${{ github.action_path }}/goodbye.sh
+      shell: bash
