--- a/action.yml
+++ b/action.yml
@@ -12,6 +12,8 @@ outputs:
 runs:
   using: "composite"
   steps:
+    - name: step one
+      uses: actions/checkout@v2
     - run: echo Hello ${{ inputs.who-to-greet }}.
       shell: bash
     - id: random-number-generator
