--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: ["nidigital", "8", "10"]
+        node: ["nidigital", "1", "2", "3", "4", "5", "6", "7", "8", "10"]
 
     steps:
       - name: step one
