--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -1,21 +1,28 @@
 name: first
 
-on: push
-
+on:
+  push: #TBD
+    paths-ignore:
+      - CHANGELOG.md
+      - CONTRIBUTING.md
+      - .gitattributes
+      - LICENSE
+      - VERSION
+      
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+  
 jobs:
   job1:
     name: First job
     strategy:
       matrix:
-        node: ["nidigital", "1", "2", "3", "4", "5", "6", "7", "8", "10"]
+        module_name: [ "nidigital", "nitclk", "nifgen", "nidcpower", "nidmm", "niscope", "nimodinst", "nise", "niswitch"]
         os: ["ubuntu-latest", "windows-latest"]
     runs-on: ${{ matrix.os }}
 
     steps:
-      - name: step one
-        uses: actions/checkout@v2
-
-      - name: run system test1
+      - name: system_tests_win32
         uses: SukruthGrandhiNI/githubactions@master
         with:
-          who-to-greet: ${{ matrix.node }}
+          module_name: ${{ matrix.node }}
