--- a/action.yml
+++ b/action.yml
@@ -13,10 +13,12 @@ runs:
     - run: echo Hello ${{ inputs.module_namet }}.
       shell: bash
     - run: |
-        cd generated
-        mkdir junit
-        mkdir kibana
-        cd ${{ inputs.module_name }}      
+        # cd generated
+        # mkdir junit
+        # mkdir kibana
+        # cd ${{ inputs.module_name }}
+        # python -m tox -c tox-system_tests.ini
+        echo ${{ inputs.module_namet }}.
       shell: bash
         
       
