--- a/action.yml
+++ b/action.yml
@@ -19,7 +19,7 @@ runs:
         # cd ${{ inputs.module_name }}
         # python -m tox -c tox-system_tests.ini
         echo ${{ inputs.module_namet }}.
-      shell: bash
+      shell: pwsh
         
       
 
