--- a/action.yml
+++ b/action.yml
@@ -11,7 +11,7 @@ runs:
     - name: checkout repository
       uses: actions/checkout@v2
     - run: echo Hello ${{ inputs.module_namet }}.
-      shell: bash
+      shell: pwsh      
     - run: |
         # cd generated
         # mkdir junit
