--- a/action.yml
+++ b/action.yml
@@ -11,7 +11,7 @@ runs:
     - name: checkout repository
       uses: actions/checkout@v2
     - run: echo Hello ${{ inputs.module_namet }}.
-      shell: pwsh      
+      shell: powershell      
     - run: |
         # cd generated
         # mkdir junit
@@ -19,7 +19,7 @@ runs:
         # cd ${{ inputs.module_name }}
         # python -m tox -c tox-system_tests.ini
         echo ${{ inputs.module_namet }}.
-      shell: pwsh
+      shell: powershell
         
       
 
