--- a/action.yml
+++ b/action.yml
@@ -10,7 +10,7 @@ runs:
   steps:
     - name: checkout repository
       uses: actions/checkout@v2
-    - run: echo Hello ${{ inputs.module_namet }}.
+    - run: echo Hello ${{ inputs.module_name }}.
       shell: powershell      
     - run: |
         # cd generated
@@ -18,7 +18,7 @@ runs:
         # mkdir kibana
         # cd ${{ inputs.module_name }}
         # python -m tox -c tox-system_tests.ini
-        echo ${{ inputs.module_namet }}.
+        echo ${{ inputs.module_name }}.
       shell: powershell
         
       
