--- a/action.yml
+++ b/action.yml
@@ -10,17 +10,15 @@ runs:
   steps:
     - name: checkout repository
       uses: actions/checkout@v2
-    - run: echo Hello ${{ inputs.module_name }}
+    - run: echo "Hello ${{ inputs.module_name }}"
       shell: powershell      
-    - run: echo Hello ${{ inputs.module_name }}
-      shell: bash      
     - run: |
         # cd generated
         # mkdir junit
         # mkdir kibana
         # cd ${{ inputs.module_name }}
         # python -m tox -c tox-system_tests.ini
-        echo ${{ inputs.module_name }}
+        echo "${{ inputs.module_name }}"
       shell: powershell
         
       
