--- a/action.yml
+++ b/action.yml
@@ -14,12 +14,11 @@ runs:
     - run: echo "Hello ${{ inputs.module_name }}"
       shell: powershell      
     - run: |
-        # cd generated
-        # mkdir junit
-        # mkdir kibana
-        # cd ${{ inputs.module_name }}
-        # python -m tox -c tox-system_tests.ini
-        echo "${{ inputs.module_name }}"
+        cd generated
+        mkdir junit
+        mkdir kibana
+        cd ${{ inputs.module_name }}
+        python -m tox -c tox-system_tests.ini        
       shell: powershell
         
       
