--- a/action.yml
+++ b/action.yml
@@ -4,7 +4,7 @@ inputs:
   module_name: 
     description: "module name"
     required: true
-    default: 'empyt'
+    default: ''
 
 runs:
   using: "composite"
