--- a/action.yml
+++ b/action.yml
@@ -14,7 +14,8 @@ runs:
     - run: echo "Hello ${{ inputs.module_name }}"
       shell: powershell      
     - run: |
-        cd generated
+        source .bashrc
+        cd generated        
         mkdir junit
         mkdir kibana
         cd ${{ inputs.module_name }}
